# ahfesak4444

./: .gitignore  README.md  USAGE.md
backend/: Makefile  env.json.example  pyproject.toml  requirements.txt  template.yaml
backend/events/: health.json  verify.json
backend/scripts/: debug.py  invoke_local.py  test_errors.py
backend/src/aws/: clients.py
backend/src/handlers/: api.py
backend/src/services/: accounts.py  bedrock_info.py  billing.py  ec2.py  free_tier.py  iam_signin.py  images.py  key_rotate.py  lightsail.py  lightsail_traffic.py  network.py  organizations.py  quota.py  regions_admin.py  traffic.py  user_data.py  zones.py
backend/src/shared/: auth.py  errors.py  regions.py  responses.py
deployer/: package.json  server.js
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: theme-init.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AccountCard.tsx  AccountFormModal.tsx  BedrockModal.tsx  BillingModal.tsx  BulkAddModal.tsx  CreateEc2Modal.tsx  CreateLightsailModal.tsx  DeployerAccountModal.tsx  Ec2Toolbar.tsx  FreeTierModal.tsx  GroupModal.tsx  Header.tsx  Homepage.tsx  IamSigninModal.tsx  LightsailToolbar.tsx  LightsailTrafficModal.tsx  PeeringModal.tsx  QuotaModal.tsx  QuotaOrb.tsx  RegionsAdminModal.tsx  RotateKeyModal.tsx  TelegramSettings.tsx  TrafficModal.tsx
frontend/src/hooks/: usePageTitle.ts  useTheme.ts
frontend/src/lib/: api.ts  bindings.ts  config.ts  csv.ts  db.ts  deployer.ts  endpoints.ts  format.ts  images.ts  toast.ts  (+6 more)
scripts/: deploy-frontend.sh  setup.sh
(+12 files in other folders)
