[project]
name = "aws-panel-backend"
version = "0.1.0"
description = "AWS multi-account control panel — Lambda backend"
requires-python = ">=3.11"
dependencies = [
    # Lambda runtime keeps these slim — boto3 is already in Lambda's Python runtime,
    # but we pin it for local parity.
    "boto3>=1.35.0",
    "botocore>=1.35.0",
    "aioboto3>=13.2.0",
    # Crypto for AK/SK envelope encryption (server-side at rest, optional)
    "cryptography>=43.0.0",
]

[dependency-groups]
dev = [
    # Local dev only — never bundled into Lambda zip
    "ipython>=8.27.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "boto3-stubs[ec2,lightsail,sts,iam,service-quotas,ssm,account]>=1.35.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
